--- a/Yggdrasil/package.json
+++ b/Yggdrasil/package.json
@@ -3,6 +3,9 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
-    "bootstrap": "5.3.2"
+    "bootstrap": "5.3.2",
+    "jquery": "3.7.1",
+    "jquery-validation": "1.19.5",
+    "jquery-validate-unobtrusive-hooks": "1.0.0"
   }
 }
