Added supporting files without deleting them

--- a/Yggdrasil/appsettings.json
+++ b/Yggdrasil/appsettings.json
@@ -6,5 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-  "FileSizeLimit": 10485760
+  "RouteOptions": {
+    "AppendTrailingSlash": "true",
+    "LowercaseUrls": "true",
+    "LowercaseQueryStrings": "true"
+  },
+  "FileSettings": {
+    "FileSizeLimit": 10485760,
+    "AllowedExtensions": [ ".pdf", ".txt", ".docx" ],
+    "MaxFilesPerHomework": 3
+  }
 }
