--- a/Yggdrasil/Properties/launchSettings.json
+++ b/Yggdrasil/Properties/launchSettings.json
@@ -18,6 +18,14 @@
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7204;http://localhost:5193"
     },
+    "YggdrasilApplication": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
